cmake_minimum_required(VERSION 3.8)
project(ONE_versus_ALL)

set(CMAKE_CXX_STANDARD 11)
set(EXECUTABLE_NAME "SFML")
add_executable(${EXECUTABLE_NAME} main.cpp)

set(SOURCE_FILES main.cpp Monster.h Living.h Hero.h Bullet.h Weapon.h)
add_executable(Source ${SOURCE_FILES})
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
find_package(SFML 2 REQUIRED system window graphics network audio)
if(SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(${EXECUTABLE_NAME} ${SFML_LIBRARIES})
endif()